fix gap bug

--- a/src/style/layout/flex-layout.scss
+++ b/src/style/layout/flex-layout.scss
@@ -25,7 +25,9 @@
     $keys: map-keys(map-get($token, gap));
     @each $key in $keys {
       &-#{$key} {
-        margin-#{$gap-direction}: map-get($token, gap, $key);
+        > * + * {
+          margin-#{$gap-direction}: map-get($token, gap, $key);
+        }
       }
     }
   }
